🩹 Fix collection item text overflow

--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -2171,7 +2171,6 @@
 		height: 27px;
 		padding: 0 7px;
 		margin: 2px;
-		max-width: 165px;
 		min-width: 149px;
 	}
 	#collection_properties_vue > ul > li.selected {
